# reskilled-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
reskilled/: cli.py  config.py  llm.py  parser.py  storage.py  ui.py
reskilled/commands/: network.py  projects.py  resume.py  setup.py
